schemas/Payment Cards/v1.0.0/cards.md
| Excel Column   | Field Name                  | Sample Value        | Comment 1                                                                                                                                   | Comment 2                                                                                                                                            | In Kaggle   |
|:---------------|:----------------------------|:--------------------|:--------------------------------------------------------------------------------------------------------------------------------------------|:-----------------------------------------------------------------------------------------------------------------------------------------------------|:------------|
| A              | User                        | 2374                | Card owner - Index into "users.csv" table                                                                                                   | This value ranges from 0 to 1 less than the number of people modeled                                                                                 | Yes         |
| B              | Card_Index                  | 2                   | Index among all cards of *this" User.  Range is [0, N-1]                                                                                    | This value ranges from 0 to 1 less than the number of cards owned by "User".  The value includes credit, debit, and prepaid cards                    | Yes         |
| C              | Card_Brand                  | Amex                | Options:  Visa, Mastercard, Amex, Discover                                                                                                  |                                                                                                                                                      | Yes         |
| D              | Card_Type                   | Credit              | Options:  Credit, Debit, Prepaid                                                                                                            |                                                                                                                                                      | Yes         |
| E              | Card_Currency               | USD                 | USD = US Dollars.   Typical value matches country of owner                                                                                  |                                                                                                                                                      | No          |
| F              | Card_Number                 | 343091875500220     |                                                                                                                                             |                                                                                                                                                      | Yes         |
| G              | Financial_Institution_ID    | 1338CA510           | For Debit cards only, the ID of the financial institution holding the linked account from which funds are withdrawn when a purchase is made |                                                                                                                                                      | No          |
| H              | Account_ID                  | 1140951206          | For Debit cards only, the account number of the linked account at the financial institution                                                 |                                                                                                                                                      | No          |
| I              | Initial_Expiration_Date     | 2028-12-01 00:00:00 | At start of transaction period                                                                                                              |                                                                                                                                                      | Yes         |
| J              | CVV                         | 979                 |                                                                                                                                             |                                                                                                                                                      | Yes         |
| K              | Has_Chip                    | YES                 | Probability depends on time period, e.g. 2005 -> No                                                                                         |                                                                                                                                                      | Yes         |
| L              | Has_Tap                     | NO                  | Probability depends on time period, e.g. 2015 -> No                                                                                         |                                                                                                                                                      | No          |
| M              | Cards_Issued                | 2                   | Number of cards issued on account                                                                                                           |                                                                                                                                                      | Yes         |
| N              | Initial_Balance             | 0                   | At start of transaction period                                                                                                              |                                                                                                                                                      | Yes         |
| O              | Final_Balance               | 7819.44             | At end of transaction period                                                                                                                | Normally the "Final Balance" will be less than the "Credit Limit", but as with real people, our simulated people sometimes exceed their credit limit | No          |
| P              | Credit_Limit                | 11900               |                                                                                                                                             |                                                                                                                                                      | No          |
| Q              | Acct_Open_Date              | 2022-01-01 00:00:00 |                                                                                                                                             |                                                                                                                                                      | Yes         |
| R              | Last_Fraudulent_Use         | NEVER               |                                                                                                                                             |                                                                                                                                                      | Yes         |
| S              | Year_Pin_Last_Changed       | 2022                |                                                                                                                                             |                                                                                                                                                      | Yes         |
| T              | Card_on_Dark_Web            | No                  |                                                                                                                                             |                                                                                                                                                      | Yes         |
| U              | Lifetime_Transactions       | 315                 | Over period of synthetic data                                                                                                               |                                                                                                                                                      | No          |
| V              | Fraudulent_Transactions     | 0                   |                                                                                                                                             |                                                                                                                                                      | No          |
| W              | Mean_Transactions_per_Month | 13                  |                                                                                                                                             |                                                                                                                                                      | No          |
